--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:fpm-alpine
 
+RUN apk add --no-cache bash
 RUN docker-php-ext-install pdo_mysql
 
-CMD ["/bin/bash","php-fpm"]
+CMD ["php-fpm"]
 
 EXPOSE 9000
